--- a/javaapp/app-deployment.yaml
+++ b/javaapp/app-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: javaapp
-        image: bgrbldrn/javaapp:1.0
+        image: bgrbldrn/javaapp
         imagePullPolicy: IfNotPresent
         env:
         - name: SPRING_DATASOURCE_URL
