--- a/javaapp/nginx-configmap.yaml
+++ b/javaapp/nginx-configmap.yaml
@@ -16,7 +16,11 @@ data:
         }
     }
     server {
-        listen 443;
+        listen 443 http2 ssl;
+        server_name deneme.com;
+
+        ssl_certificate /etc/nginx/certs/tls.crt;
+        ssl_certificate_key /etc/nginx/certs/tls.key;
 
         location / {
             proxy_pass http://javaapp:8080;
@@ -26,4 +30,3 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-
