--- a/javaapp/nginx-deployment.yaml
+++ b/javaapp/nginx-deployment.yaml
@@ -21,7 +21,12 @@ spec:
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/conf.d
+        - name: nginx-certs
+          mountPath: /etc/nginx/certs
       volumes:
       - name: nginx-config
         configMap:
           name: nginx-config
+      - name: nginx-certs
+        secret:
+          secretName: tls-secret
